# Cube

./: .coverage  .gitignore  COMPREHENSIVE_CODE_REVIEW.md  CRITICAL_ANALYSIS_REPORT.md  DEEP_ANALYSIS_REPORT.md  Dockerfile  Makefile  PRODUCT_ROADMAP.md  README.md  config.example.json  config.py  demo_cognitive_log.json  knowledge_graph.json  llm_client.py  long_term_evolution.py  memory_bank.json  multimodal_perception.py  plan.md  pyproject.toml  secure_sandbox.py  self_reflection.py  smart_debug_loop.py  task_done.md  test_cognition_engine.py  test_cognitive_log.json  test_config.py  test_embodied_environment.py  test_experiment_phase5.py  test_smart_debug.py  test_token_optimizer.py  test_ucr_layer.py  world_model.py
.github/workflows/: ci.yml
demos/: cognitive_resonance_demo.py
docs/: API_DOCUMENTATION.md  COGNITIVE_RESONANCE_ENGINE.md  DEPLOYMENT_GUIDE.md  PHENOMENOLOGY_ENGINE.md
src/: __init__.py  system_orchestrator.py
src/api/: cognitive_api.py
tests/: conftest.py  test_analogy_engine.py  test_api.py  test_cognition_engine.py  test_cognitive_loop.py  test_cognitive_resonance.py  test_concept_abstraction.py  test_config.py  test_creative_imagination.py  test_creativity_engine.py  test_data_learning_simulation.py  test_di_container.py  test_embodied_environment.py  test_intrinsic_motivation.py  test_knowledge_graph.py  test_lifelong_learner.py  test_lifelong_learning.py  test_llm_client.py  test_metacognition.py  test_multimodal_perception.py  test_multimodal_synesthesia.py  test_performance.py  test_phenomenology.py  test_rate_limiter.py  test_secure_sandbox.py  test_self_reflection.py  test_slow_thinking.py  test_smart_debug.py  test_social_cognition.py  test_token_optimizer.py  test_ucr_layer.py  test_world_model.py
(+43 files in other folders)
