[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cognition-engine"
version = "9.0.0"
description = "AI 编程能力提升系统 - 统一认知表示与自主智慧引擎"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Cognition Engine Team", email = "ai-cognition@example.com"}
]
keywords = [
    "ai",
    "cognition",
    "machine-learning",
    "knowledge-graph",
    "world-model",
    "multi-modal",
    "autonomous-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/ai-cognition-engine"
Documentation = "https://ai-cognition-engine.readthedocs.io"
Repository = "https://github.com/example/ai-cognition-engine.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
